WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258996
Fix unused field warning in RunLoopObserver for non-Cocoa platforms
https://bugs.webkit.org/show_bug.cgi?id=258996
Summary
Fix unused field warning in RunLoopObserver for non-Cocoa platforms
Don Olmstead
Reported
2023-07-07 14:54:04 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2023-07-07 15:17:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15650
EWS
Comment 2
2023-07-07 18:13:50 PDT
Committed
265873@main
(6a797e18d769): <
https://commits.webkit.org/265873@main
> Reviewed commits have been landed. Closing PR #15650 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-07 18:14:15 PDT
<
rdar://problem/111937053
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug