Fix unused field warning in RunLoopObserver for non-Cocoa platforms https://bugs.webkit.org/show_bug.cgi?id=258996

Reviewed by Wenson Hsieh.

Make `m_order` specific to `USE(CF)`.

* Source/WebCore/platform/RunLoopObserver.h:
(WebCore::RunLoopObserver::RunLoopObserver):

Canonical link: https://commits.webkit.org/265873@main